{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 76,
  "lineage": "cf2264a9-f1c7-d345-48a7-31028ad8e6eb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mysql_os",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0447a12f28fddb066",
            "arn": "arn:aws:ec2:ap-south-1:684956208517:instance/i-0cc387cb7ff559a7a",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cc387cb7ff559a7a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "myterrakey3",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07480b789ab51a09a",
            "private_dns": "ip-192-168-1-57.ap-south-1.compute.internal",
            "private_ip": "192.168.1.57",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-013fdb27657fcec7d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-02f956c0ba09f9c14"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0301ceb6f4fc05446",
            "tags": {
              "Name": "mysql_os"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02f956c0ba09f9c14"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_security_group.sec_grp_mysql",
            "aws_security_group.sec_grp_wp",
            "aws_subnet.terra_subnet1b",
            "aws_vpc.terra_vpc",
            "tls_private_key.myterrakey3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wp_os",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-000cbce3e1b899ebd",
            "arn": "arn:aws:ec2:ap-south-1:684956208517:instance/i-0ffd445dd46b5df01",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ffd445dd46b5df01",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "myterrakey3",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07072db83afcf9047",
            "private_dns": "ip-192-168-0-139.ap-south-1.compute.internal",
            "private_ip": "192.168.0.139",
            "public_dns": "ec2-15-206-66-177.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.206.66.177",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0aaeb116004e1ba38",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-09cdaa232c2d9411b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-038e17fa8127f359e",
            "tags": {
              "Name": "wp_os"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09cdaa232c2d9411b"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_security_group.sec_grp_wp",
            "aws_subnet.terra_subnet1a",
            "aws_vpc.terra_vpc",
            "tls_private_key.myterrakey3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terra_ig",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:684956208517:internet-gateway/igw-0bb7e2f98bf446105",
            "id": "igw-0bb7e2f98bf446105",
            "owner_id": "684956208517",
            "tags": {
              "Name": "terra_ig"
            },
            "vpc_id": "vpc-03c8fa7e7a18869aa"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terra_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01e6b349b9073a89d",
            "owner_id": "684956208517",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bb7e2f98bf446105",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terra_route"
            },
            "vpc_id": "vpc-03c8fa7e7a18869aa"
          },
          "dependencies": [
            "aws_internet_gateway.terra_ig",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terra_route_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ff9fff1adc76a72",
            "route_table_id": "rtb-01e6b349b9073a89d",
            "subnet_id": "subnet-038e17fa8127f359e"
          },
          "dependencies": [
            "aws_internet_gateway.terra_ig",
            "aws_route_table.terra_route",
            "aws_subnet.terra_subnet1a",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terra_route_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df39c39a2b4e0884",
            "route_table_id": "rtb-01e6b349b9073a89d",
            "subnet_id": "subnet-0301ceb6f4fc05446"
          },
          "dependencies": [
            "aws_internet_gateway.terra_ig",
            "aws_route_table.terra_route",
            "aws_subnet.terra_subnet1b",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec_grp_mysql",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:684956208517:security-group/sg-02f956c0ba09f9c14",
            "description": "Allows data for Private",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02f956c0ba09f9c14",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MYSQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09cdaa232c2d9411b"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "sec_grp_mysql",
            "name_prefix": "",
            "owner_id": "684956208517",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sec_grp_mysql"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c8fa7e7a18869aa"
          },
          "dependencies": [
            "aws_security_group.sec_grp_wp",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec_grp_wp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:684956208517:security-group/sg-09cdaa232c2d9411b",
            "description": "Allows SSH and HTTP for Public",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09cdaa232c2d9411b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sec_grp_wp",
            "name_prefix": "",
            "owner_id": "684956208517",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sec_grp_wp"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c8fa7e7a18869aa"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra_subnet1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:684956208517:subnet/subnet-038e17fa8127f359e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-038e17fa8127f359e",
            "map_public_ip_on_launch": true,
            "owner_id": "684956208517",
            "tags": {
              "Name": "terra_subnet1a"
            },
            "vpc_id": "vpc-03c8fa7e7a18869aa"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terra_subnet1b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:684956208517:subnet/subnet-0301ceb6f4fc05446",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0301ceb6f4fc05446",
            "map_public_ip_on_launch": false,
            "owner_id": "684956208517",
            "tags": {
              "Name": "terra_subnet1b"
            },
            "vpc_id": "vpc-03c8fa7e7a18869aa"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terra_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:684956208517:vpc/vpc-03c8fa7e7a18869aa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-09a207ae69fcfc909",
            "default_route_table_id": "rtb-05bd7708896e258b7",
            "default_security_group_id": "sg-0f62e1e8438084421",
            "dhcp_options_id": "dopt-061a4d6dd56f69fdf",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03c8fa7e7a18869aa",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05bd7708896e258b7",
            "owner_id": "684956208517",
            "tags": {
              "Name": "terra_vpc"
            }
          }
        }
      ]
    }
  ]
}